--- a/Cube/UI/app_MainWindow.ui
+++ b/Cube/UI/app_MainWindow.ui
@@ -14,7 +14,7 @@
    <string>Cube Viewer</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <layout class="QHBoxLayout" name="horizontalLayout" stretch="6,1">
+   <layout class="QHBoxLayout" name="horizontalLayout" stretch="6">
     <item>
      <layout class="QVBoxLayout" name="verticalLayout" stretch="1,6">
       <item>
@@ -60,13 +60,6 @@
        </widget>
       </item>
      </layout>
-    </item>
-    <item>
-     <widget class="QGroupBox" name="groupBox">
-      <property name="title">
-       <string>GroupBox</string>
-      </property>
-     </widget>
     </item>
    </layout>
   </widget>
@@ -130,6 +123,24 @@
    <addaction name="menuHelp"/>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
+  <widget class="QDockWidget" name="dockWidget_Breakdown">
+   <property name="minimumSize">
+    <size>
+     <width>200</width>
+     <height>38</height>
+    </size>
+   </property>
+   <property name="floating">
+    <bool>true</bool>
+   </property>
+   <property name="windowTitle">
+    <string>Cube Breakdown</string>
+   </property>
+   <attribute name="dockWidgetArea">
+    <number>2</number>
+   </attribute>
+   <widget class="QWidget" name="dockWidgetContents"/>
+  </widget>
   <action name="actionNew">
    <property name="enabled">
     <bool>false</bool>
